docs: new README + user manual v2 with java-chains (jchains_*) coverage
- README: complete rewrite with architecture, all 82 chains, env vars, quick start
- user-manual: v2 — updated arch diagram, add jchains_* section (7.7) with all
  19 chains and verified payload sizes, fix Hessian status, add FAQ entries for
  java-chains and Hessian _tfactory workaround

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>